# gyre

./: .gitignore  .pre-commit-config.yaml  .ralph-loop-status.md  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  flake.nix
crates/gyre-adapters/: Cargo.toml
crates/gyre-adapters/migrations/2024-01-01-000001_initial_schema/: down.sql  up.sql
crates/gyre-adapters/migrations/2026-03-20-000002_add_tenant_id/: down.sql  up.sql
crates/gyre-adapters/migrations/2026-03-20-000003_spawn_log_revoked_tokens/: down.sql  up.sql
crates/gyre-adapters/migrations/2026-03-20-000004_agent_spawned_by/: down.sql  up.sql
crates/gyre-adapters/migrations/2026-03-20-000005_mr_dependencies/: down.sql  up.sql
crates/gyre-adapters/migrations/2026-03-23-000006_network_peer_mesh_fields/: down.sql  up.sql
crates/gyre-adapters/migrations/2026-03-23-000007_platform_entities/: down.sql  up.sql
crates/gyre-adapters/migrations/2026-03-23-000008_workspace_id_columns/: down.sql  up.sql
crates/gyre-adapters/migrations/2026-03-23-000009_kv_store_and_budget_usage/: down.sql  up.sql
crates/gyre-adapters/migrations/2026-03-23-000009_persist_batch_a/: down.sql  up.sql
crates/gyre-adapters/migrations/2026-03-24-000011_task_spec_path/: down.sql  up.sql
crates/gyre-adapters/migrations/2026-03-24-000012_persona_versioning/: down.sql  up.sql
crates/gyre-adapters/migrations/2026-03-24-000012_remove_projects/: up.sql
crates/gyre-adapters/migrations/2026-03-24-000013_remove_projects/: down.sql
crates/gyre-adapters/migrations/2026-03-24-000013_tenants/: up.sql
crates/gyre-adapters/migrations/2026-03-24-000014_task_hierarchy_fields/: down.sql  up.sql
crates/gyre-adapters/migrations/2026-03-24-000015_ralph_step_removal/: down.sql  up.sql
crates/gyre-adapters/migrations/2026-03-24-000015_task_hierarchy_fields/: down.sql
crates/gyre-adapters/migrations/2026-03-24-000016_task_hierarchy_fields/: up.sql
crates/gyre-adapters/migrations/2026-03-24-000017_messages/: up.sql
crates/gyre-adapters/migrations/2026-03-24-000018_meta_spec_sets/: down.sql  up.sql
crates/gyre-adapters/migrations/2026-03-24-000018_workspace_slug_unique/: down.sql  up.sql
crates/gyre-adapters/migrations/2026-03-25-000019_hsi_notifications/: up.sql
crates/gyre-adapters/migrations/2026-03-25-000020_conversations/: down.sql  up.sql
crates/gyre-adapters/migrations/2026-03-25-000020_hsi_notifications/: down.sql
crates/gyre-adapters/migrations/2026-03-25-000022_gate_traces/: down.sql  up.sql
crates/gyre-adapters/migrations/2026-03-25-000022_graph_test_coverage/: up.sql
crates/gyre-adapters/migrations/2026-03-25-000022_platform_amendments/: down.sql
crates/gyre-adapters/migrations/2026-03-25-000023_graph_test_coverage/: down.sql
crates/gyre-adapters/migrations/2026-03-25-000024_interrogation_agents/: up.sql
crates/gyre-adapters/migrations/2026-03-25-000024_platform_amendments/: up.sql
crates/gyre-adapters/migrations/2026-03-25-000025_explorer_views/: down.sql  up.sql
crates/gyre-adapters/migrations/2026-03-25-000026_interrogation_agents/: down.sql  up.sql
crates/gyre-adapters/migrations/2026-03-26-000024_user_workspace_state/: down.sql
crates/gyre-adapters/migrations/2026-03-26-000025_policy_immutable/: down.sql
crates/gyre-adapters/src/: git2_ops.rs  jj_ops.rs  lib.rs  mem_graph.rs  mem_saved_view.rs  mem_search.rs  schema.rs  sqlite.rs
crates/gyre-cli/: Cargo.toml
crates/gyre-cli/src/: client.rs  config.rs  main.rs  tui.rs  ws.rs
crates/gyre-cli/tests/: ws_integration.rs
crates/gyre-common/: Cargo.toml
crates/gyre-common/src/: attestation.rs  completion.rs  conversation.rs  error.rs  gate.rs  graph.rs  id.rs  key_binding.rs  lib.rs  message.rs  notification.rs  protocol.rs  trace.rs  view_query.rs  view_spec.rs
crates/gyre-domain/: Cargo.toml
crates/gyre-domain/src/: activity.rs  agent.rs  agent_card.rs  agent_tracking.rs  analytics.rs  attestation.rs  audit.rs  budget.rs  compose.rs  compute_target.rs  constraint_evaluator.rs  container_audit.rs  dependency.rs  extractor.rs  git_types.rs  go_extractor.rs  lib.rs  llm_config.rs  lsp_call_graph.rs  merge_queue.rs  merge_request.rs  message_type.rs  meta_spec.rs  network_peer.rs  notification.rs  policy.rs  project.rs  prompt_template.rs  python_extractor.rs  quality_gate.rs  repository.rs  review.rs  rust_extractor.rs  spec_approval.rs  spec_assertions.rs  spec_ledger.rs  spec_policy.rs  task.rs  team.rs  tenant.rs  (+7 more)
crates/gyre-ports/: Cargo.toml
crates/gyre-ports/src/: activity.rs  agent.rs  agent_tracking.rs  analytics.rs  attestation_repo.rs  audit.rs  breaking_change.rs  budget.rs  budget_usage.rs  chain_attestation.rs  compute.rs  compute_target_repository.rs  container_audit_repo.rs  conversation.rs  dependency.rs  dependency_policy.rs  git_ops.rs  graph.rs  jj_ops.rs  key_binding_repo.rs  kv_store.rs  lib.rs  llm.rs  llm_config.rs  merge_queue.rs  merge_request.rs  message.rs  meta_spec_repository.rs  meta_spec_set.rs  network.rs  notification.rs  policy.rs  pre_accept.rs  project.rs  prompt_template.rs  push_gate.rs  quality_gate.rs  repository.rs  review.rs  saved_view.rs  (+17 more)
crates/gyre-server/: Cargo.toml  build.rs
crates/gyre-server/snapshots/: 1774046900.json  1774046918.json  1774047019.json
crates/gyre-server/src/: abac.rs  abac_middleware.rs  abandoned_branch.rs  activity.rs  attestation.rs  audit_simulator.rs  auth.rs  commit_signatures.rs  constraint_check.rs  container_audit.rs  dep_staleness.rs  domain_events.rs  explorer_ws.rs  gate_executor.rs  git_http.rs  git_refs.rs  graph_extraction.rs  health.rs  jobs.rs  lib.rs  llm_defaults.rs  llm_helpers.rs  llm_rate_limit.rs  main.rs  mcp.rs  mem.rs  merge_processor.rs  messages.rs  metrics.rs  middleware.rs  mirror_sync.rs  notifications.rs  oidc.rs  otlp_receiver.rs  policy_engine.rs  pre_accept.rs  procfs_monitor.rs  rate_limit.rs  rbac.rs  retention.rs  (+18 more)
crates/gyre-server/tests/: api_integration.rs  auth_integration.rs  conversation_integration.rs  e2e_ralph_loop.rs  explorer_ws_integration.rs  git_integration.rs  graph_integration.rs  m18_oidc_integration.rs
(+882 files in other folders)
