[workspace]
resolver = "2"
members = [
    "crates/gyre-server",
    "crates/gyre-cli",
    "crates/gyre-domain",
    "crates/gyre-ports",
    "crates/gyre-adapters",
    "crates/gyre-common",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jsell-rh/gyre"

[workspace.dependencies]
# Error handling
anyhow = "1"
thiserror = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Tracing / observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP server
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Static asset embedding
rust-embed = "8"
mime_guess = "2"

# Async utilities
futures-util = "0.3"
async-trait = "0.1"

# CLI
clap = { version = "4", features = ["derive"] }

# WebSocket
tokio-tungstenite = "0.24"
url = "2"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# HTTP client (CLI health check)
reqwest = { version = "0.12", features = ["json"] }

# Internal crates
gyre-common = { path = "crates/gyre-common" }
gyre-ports = { path = "crates/gyre-ports" }
gyre-domain = { path = "crates/gyre-domain" }
gyre-adapters = { path = "crates/gyre-adapters" }

[profile.release]
lto = true
codegen-units = 1
strip = true
