[workspace]
resolver = "2"
members = [
    "crates/gyre-server",
    "crates/gyre-cli",
    "crates/gyre-domain",
    "crates/gyre-ports",
    "crates/gyre-adapters",
    "crates/gyre-common",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/jsell-rh/gyre"

[workspace.dependencies]
# Error handling
anyhow = "1"
thiserror = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Tracing / observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }
tracing-opentelemetry = "0.28"

# Metrics
prometheus = "0.13"

# HTTP server
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }
diesel = { version = "2", features = ["sqlite", "postgres", "r2d2", "32-column-tables"] }
diesel_migrations = "2"
libsqlite3-sys = { version = "0.28", features = ["bundled"] }

# Static asset embedding
rust-embed = "8"
mime_guess = "2"

# Async utilities
futures-util = "0.3"
async-trait = "0.1"

# CLI
clap = { version = "4", features = ["derive"] }

# WebSocket
tokio-tungstenite = "0.24"
url = "2"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# HTTP client (CLI health check + OIDC JWKS fetch)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }

# JWT auth — disable default PEM support to avoid simple_asn1 → time 0.3.47 MSRV conflict.
# Keys are loaded from DER bytes or JWK JSON (both work without the PEM feature).
# Ring is always included as a transitive dep of jsonwebtoken (provides RSA/EC/EdDSA).
jsonwebtoken = { version = "9", default-features = false }

# Cryptographic primitives for agent JWT key generation (M18 OIDC provider).
ring = "0.17"

# ID generation
uuid = { version = "1", features = ["v4"] }

# Constant-time comparison (M16 security hardening)
subtle = "2"

# YAML parsing (agent-compose specs)
serde_yaml = "0.9"

# Git operations
git2 = "0.19"

# AST parsing for Rust language extractor
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
# TOML parsing for Cargo.toml
toml = "0.8"
# Directory walking
walkdir = "2"
# Tree-sitter AST parsing for multi-language graph extraction (polyglot dispatch)
tree-sitter = "0.25"

# Concurrent hash map for in-memory stores (TelemetryBuffer)
dashmap = "6"
# Zstd compression (conversation provenance)
zstd = "0.13"
# Hex encoding for SHA digests
hex = "0.4"
# CEL expression evaluation (authorization provenance constraints)
cel-interpreter = "0.10"
cel-parser = "0.10"

# Internal crates
gyre-common = { path = "crates/gyre-common" }
gyre-ports = { path = "crates/gyre-ports" }
gyre-domain = { path = "crates/gyre-domain" }
gyre-adapters = { path = "crates/gyre-adapters" }

[profile.release]
lto = true
codegen-units = 1
strip = true
