[package]
name = "gyre-adapters"
description = "Adapter implementations (SQLite, etc.) for the Gyre platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
rusqlite = { workspace = true }
gyre-common = { workspace = true }
gyre-domain = { workspace = true }
gyre-ports = { workspace = true }

[dev-dependencies]
tempfile = "3"
