[package]
name = "gyre-adapters"
description = "Adapter implementations (SQLite, etc.) for the Gyre platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
rusqlite = { workspace = true }
diesel = { workspace = true }
diesel_migrations = { workspace = true }
git2 = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
gyre-common = { workspace = true }
gyre-domain = { workspace = true }
gyre-ports = { workspace = true }

[dev-dependencies]
tempfile = "3"
libsqlite3-sys = { workspace = true }
