[package]
name = "gyre-adapters"
description = "Adapter implementations (SQLite, etc.) for the Gyre platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
rusqlite = { workspace = true }
diesel = { workspace = true }
diesel_migrations = { workspace = true }
git2 = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
zstd = { workspace = true }
sha2 = "0.10"
hex = "0.4"
ring = { workspace = true }
futures-util = { workspace = true }
gyre-common = { workspace = true }
gyre-domain = { workspace = true }
gyre-ports = { workspace = true }

# LLM inference via Google Vertex AI — direct REST API + ADC auth.
# rig-core ≥ 0.33.0 requires Rust 1.88 (let chains); our MSRV is 1.87.
# We implement the adapter using reqwest + ring (for JWT signing).
reqwest = { workspace = true }
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
libsqlite3-sys = { workspace = true }
