[package]
name = "gyre-cli"
description = "Command-line interface for the Gyre platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "gyre"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
gyre-common = { workspace = true }
