[package]
name = "gyre-common"
description = "Shared types and errors for the Gyre platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
dashmap = { workspace = true }
