[package]
name = "gyre-domain"
description = "Pure domain logic for the Gyre platform - no infrastructure dependencies"
version.workspace = true
edition.workspace = true
license.workspace = true

# INVARIANT: gyre-domain MUST NOT depend on gyre-adapters or any infrastructure crate.
# Domain depends only on gyre-ports and gyre-common.
# This is enforced by the architecture lint in scripts/check-arch.sh and CI.
[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
gyre-common = { workspace = true }
sha2 = "0.10"
syn = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
uuid = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-go = "0.23"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
