[package]
name = "gyre-ports"
description = "Port traits (interfaces) for the Gyre platform - hexagonal architecture boundary"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"
futures-util = { workspace = true }
gyre-common = { workspace = true }
gyre-domain = { workspace = true }
