[package]
name = "gyre-server"
description = "HTTP/WebSocket server for the Gyre platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "gyre-server"
path = "src/main.rs"

[lib]
name = "gyre_server"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
prometheus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
futures-util = { workspace = true }
gyre-common = { workspace = true }
gyre-ports = { workspace = true }
gyre-domain = { workspace = true }
gyre-adapters = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio-tungstenite = "0.24"
http = "1"
tower = { workspace = true, features = ["util"] }
tempfile = "3"
reqwest = { workspace = true, features = ["json"] }
